Style left pane with logo, footer, and bg

--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sign Up</title>
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
     <div class="main-container">
       <aside>
         <div class="logo-div">
-          <img src="./img/odin-lined.png" alt="Greenery" />
+          <div class="inner-logo-div">
+            <img src="./img/odin-lined.png" alt="Greenery" />
+            <p>ODIN</p>
+          </div>
         </div>
-        <footer>Built by Sam O'Dan</footer>
+        <footer><p>Built by Sam O'Dan</p></footer>
       </aside>
       <article>
         <div class="upper">
