--- a/index.html
+++ b/index.html
@@ -27,40 +27,40 @@
           </p>
           <p>You <em>know</em> you want to.</p>
         </div>
-        <form action="">
+        <form action="" method="get">
         <div class="middle">
           <h1 class="title">Let's do this!</h1>
           
-            <div class="form-row">
-              <div class="input-div">
-                <label for="first-name">FIRST NAME</label>
-                <input type="text" name="first-name" id="first-name" />
-              </div>
-              <div class="input-div">
-                <label for="last-name">LAST NAME</label
-                ><input type="text" id="last-name" />
-              </div>
+          <div class="form-row">
+            <div class="input-div">
+              <label for="first-name">FIRST NAME</label>
+              <input type="text" name="first-name" id="first-name" />
             </div>
-            <div class="form-row">
-              <div class="input-div">
-                <label for="email">EMAIL</label
-                ><input type="text" id="email" name="email" />
-              </div>
-              <div class="input-div">
-                <label for="number">PHONE NUMBER</label
-                ><input type="text" name="phone-number" id="number" />
-              </div>
+            <div class="input-div">
+              <label for="last-name">LAST NAME</label
+              ><input type="text" id="last-name" />
             </div>
-            <div class="form-row">
-              <div class="input-div">
-                <label for="password">PASSWORD</label
-                ><input type="text" name="password" id="password" />
-              </div>
-              <div class="input-div">
-                <label for="confirm-password">CONFIRM PASSWORD</label
-                ><input type="text" name="password-two" id="confirm-password" />
-              </div>
+          </div>
+          <div class="form-row">
+            <div class="input-div">
+              <label for="email">EMAIL</label
+              ><input type="email" id="email" name="email" required />
             </div>
+            <div class="input-div">
+              <label for="number">PHONE NUMBER</label
+              ><input type="text" name="phone-number" id="number" />
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="input-div">
+              <label for="password">PASSWORD</label
+              ><input type="text" name="password" id="password" />
+            </div>
+            <div class="input-div">
+              <label for="confirm-password">CONFIRM PASSWORD</label
+              ><input type="text" name="password-two" id="confirm-password" />
+            </div>
+          </div>
           
         </div>
         <div class="lower">
