--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
           <div class="form-row">
             <div class="input-div">
               <label for="first-name">FIRST NAME</label>
-              <input type="text" name="first-name" id="first-name" />
+              <input type="text" name="first-name" id="first-name" required />
             </div>
             <div class="input-div">
               <label for="last-name">LAST NAME</label
-              ><input type="text" id="last-name" />
+              ><input type="text" id="last-name" required />
             </div>
           </div>
           <div class="form-row">
@@ -48,17 +48,17 @@
             </div>
             <div class="input-div">
               <label for="number">PHONE NUMBER</label
-              ><input type="text" name="phone-number" id="number" />
+              ><input type="text" name="phone-number" id="number" required />
             </div>
           </div>
           <div class="form-row">
             <div class="input-div">
               <label for="password">PASSWORD</label
-              ><input type="text" name="password" id="password" />
+              ><input type="text" name="password" id="password" required />
             </div>
             <div class="input-div">
               <label for="confirm-password">CONFIRM PASSWORD</label
-              ><input type="text" name="password-two" id="confirm-password" />
+              ><input type="text" name="password-two"id="confirm-password" required/>
             </div>
           </div>
           
