--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
         <div class="lower">
           <button type="submit">Create Account</button>
         </form>
+        <p>Already have an account? <a href="#">Log in</a></p>
         </div>
       </article>
     </div>
